# Group-9-Exoplanet-Detection

./: .gitignore  README.md  app.py  exoplanet_research.py  light_curve.py  lightcurve_visualizer.ipynb  prd_ocr.txt  pyproject.toml  requirements-3.14.txt  requirements.txt  test.py
.claude/: settings.local.json
data/catalogs/: koi_cumulative.csv  toi_catalog.csv
data/datasets/: manifest.csv
data/datasets/both_exclude_candidates/: test.csv  train.csv  val.csv
data/datasets/both_include_candidates/: test.csv  train.csv  val.csv
data/datasets/full_dataset/: test.csv  train.csv  val.csv
data/datasets/kepler_exclude_candidates/: test.csv  train.csv  val.csv
data/datasets/kepler_include_candidates/: test.csv  train.csv  val.csv
data/datasets/tess_exclude_candidates/: test.csv  train.csv  val.csv
results/: default_metrics.json  metrics.json
scripts/: backend_workflow.py  build_dataset.py  compare_models.py  curate_dataset.py  download.py  evaluate.py  make_synthetic_dataset.py  predict.py  predict_target.py  preprocess.py  train.py  train_model.py
src/: build_dataset.py  data_loader.py  dataloader.py  dataset.py  dataset_builder.py  evaluate.py  test.py  train.py  utils.py
src/data/: ExoplanetDataset.py  dataset.py  dataset_builder.py  download.py  preprocess.py  preprocessing.py
src/exoplanet_detection/: __init__.py  config.py  service.py
src/exoplanet_detection/models/: classifier.py  (+1 more)
src/exoplanet_detection_group9.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: evaluate.py  model.py  predict.py  regression.py  train.py
(+6 files in other folders)
